# RPG

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
criacao_personagem/: criacao_personagem.c  criacao_personagem.h
dado/: dado.c  dado.h
estado/: estado.c  estado.h
exit/: exit.c  exit.h
fase1/: fase1.c  fase1.h
inimigo/: inimigo.c  inimigo.h
introducao/: introducao.c  introducao.h
menu_principal/: menu_principal.c  menu_principal.h
personagem_principal/: habilidade.c  habilidade.h  item.c  personagem_principal.c  personagem_principal.h
sistema_batalha/: batalha.c  batalha.h
src/: CMakeLists.txt  board_tile.c  dirt_tile.c  grass_tile.c  main.c  player.c  stageOne.c  stagesObserver.c  tree_tile.c
src/includes/: board_tile.h  dirt_tile.h  grass_tile.h  player.h  stageOne.h  stagesObserver.h  tree_tile.h  utils_rpg.h
utils/: utils.c  utils.h
